--- a/index.html
+++ b/index.html
@@ -38,6 +38,18 @@
     </div> -->
   </div>
   <script src="./slider.js"></script>
+  <script>
+  Slider({
+    el: '#slider',
+    data: [
+      './img/slider1.png',
+      './img/slider2.png',
+      './img/slider3.png',
+      './img/slider4.png',
+      './img/slider5.png'
+    ]
+  })
+  </script>
 </body>
 
 </html>
