add build script

--- a/demo/index.html
+++ b/demo/index.html
@@ -37,7 +37,7 @@
       </ul>
     </div> -->
   </div>
-  <script src="./slider.js"></script>
+  <script src="../dist/eSlider.min.js"></script>
   <script>
   Slider({
     el: '#slider',
