--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div id="slider" class="slider">
   </div>
-  <script src="http://cdn.rawgit.com/kraaas/eSlider/master/dist/eSlider.min.js"></script>
+  <script src="https://cdn.rawgit.com/kraaas/eSlider/master/dist/eSlider.min.js"></script>
   <script>
   var eSlider = Slider({
     el: '#slider',
