add loop switch

--- a/demo/index.html
+++ b/demo/index.html
@@ -37,7 +37,7 @@
       </ul>
     </div> -->
   </div>
-  <script src="../dist/eSlider.min.js"></script>
+  <script src="../src/index.js"></script>
   <script>
   Slider({
     el: '#slider',
@@ -45,8 +45,8 @@
       './img/slider1.png',
       './img/slider2.png',
       './img/slider3.png',
-      './img/slider4.png',
-      './img/slider5.png'
+      // './img/slider4.png',
+      // './img/slider5.png'
     ]
   })
   </script>
