--- a/demo/index.html
+++ b/demo/index.html
@@ -47,7 +47,9 @@
       './img/slider3.png',
       // './img/slider4.png',
       // './img/slider5.png'
-    ]
+    ],
+    autoPlay: false,
+    loop: false
   })
   </script>
 </body>
