--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no" />
+  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
   <title>slide</title>
   <link rel="stylesheet" href="./app.css">
 </head>
@@ -48,8 +48,9 @@
       // './img/slider4.png',
       // './img/slider5.png'
     ],
-    autoPlay: false,
-    loop: false
+    autoPlay: true,
+    loop: true,
+    vertical: true
   })
   </script>
 </body>
