feature|add circle indicator

--- a/demo/index.html
+++ b/demo/index.html
@@ -45,12 +45,16 @@
       './img/slider1.png',
       './img/slider2.png',
       './img/slider3.png',
-      // './img/slider4.png',
-      // './img/slider5.png'
+      './img/slider4.png',
+      './img/slider5.png'
     ],
     autoPlay: true,
     loop: true,
-    vertical: true
+    vertical: false,
+    transtionType: 'normal',
+    duration: 2000,
+    indicatorPos: 'content',
+    indicatorType: 'normal'
   })
   </script>
 </body>
