--- a/demo/index.html
+++ b/demo/index.html
@@ -48,13 +48,13 @@
       './img/slider4.png',
       './img/slider5.png'
     ],
-    autoPlay: true,
-    loop: true,
+    autoPlay: false,
+    loop: false,
     vertical: false,
     transtionType: 'normal',
     duration: 2000,
-    indicatorPos: 'content',
-    indicatorType: 'normal'
+    indicatorPos: 'right',
+    indicatorType: 'circle'
   })
   </script>
 </body>
