--- a/demo/index.html
+++ b/demo/index.html
@@ -55,7 +55,7 @@
     indicatorPos: 'right',
     indicatorType: 'circle',
     touchRange: 10,
-    initSlide: 'first'
+    initSlide: '1'
   })
   </script>
 </body>
