feature | support eableGPU

--- a/demo/index.html
+++ b/demo/index.html
@@ -31,10 +31,11 @@
     vertical: false,
     transtionType: 'normal',
     duration: 2000,
+    showIndicator: false,
     indicatorPos: 'right',
     indicatorType: 'circle',
     touchRange: 10,
-    initSlide: '1'
+    initSlide: 0
   })
   </script>
 </body>
