--- a/demo/index.html
+++ b/demo/index.html
@@ -21,19 +21,21 @@
       './img/slider3.png',
       './img/slider4.png',
       './img/slider5.png',
+      '<div><h1>slider6</h1></div>',
+      '<div><a href="/test">slider8</a></div>',
       {
-        name: 'first',
-        content: '<img src="./img/slider5.png">'
+        name: 'slider7',
+        content: '<div><h1>slider7</h1></div>'
       }
     ],
     autoPlay: false,
-    loop: false,
+    loop: true,
     vertical: false,
     transtionType: 'normal',
-    duration: 2000,
-    showIndicator: false,
-    indicatorPos: 'right',
-    indicatorType: 'circle',
+    duration: 1000,
+    showIndicator: true,
+    indicatorPos: 'center',
+    indicatorType: 'normal',
     touchRange: 10,
     initSlide: 0
   })
