--- a/demo/index.html
+++ b/demo/index.html
@@ -11,6 +11,7 @@
 <body>
   <div id="slider" class="slider">
   </div>
+  <a href="/test" target="_blank">click</a>
   <script src="../src/index.js"></script>
   <script>
   var slider = new eSlider({
@@ -22,7 +23,7 @@
       './img/slider4.png',
       './img/slider5.png',
       '<div><h1>slider6</h1></div>',
-      '<div><a href="/test">slider8</a></div>',
+      '<div><a href="/test" target="_blank" rel="noreferrer">slider8</a></div>',
       {
         name: 'slider7',
         content: '<div><h1>slider7</h1></div>'
