--- a/demo/index.html
+++ b/demo/index.html
@@ -16,6 +16,10 @@
   var slider = new eSlider({
     el: '#slider',
     data: [{
+        name: 'slider7',
+        content: '<a rel="external" href="/test"><img src="./img/slider4.png" alt="" /></a>',
+        description: '哈哈哈'
+      }, {
         content: './img/slider1.png',
         description: '哈哈哈'
       },
@@ -23,11 +27,7 @@
       './img/slider3.png',
       './img/slider4.png',
       '<a href="/test">slider</a>',
-      './img/slider5.png', {
-        name: 'slider7',
-        content: '<img src="./img/slider4.png" alt="" />',
-        description: '哈哈哈'
-      }
+      './img/slider5.png',
     ],
     autoPlay: false,
     loop: true,
