--- a/demo/index.html
+++ b/demo/index.html
@@ -25,23 +25,24 @@
     data: [{
         name: 'slider1',
         content: './img/slider1.png',
-        description: 'slider1'
+        // description: 'slider1'
       }, {
         content: './img/slider2.png',
-        description: 'slider2'
+        // description: 'slider2'
       },
       './img/slider3.png',
       './img/slider4.png',
       './img/slider5.png'
     ],
     replace: true,
-    autoPlay: false,
+    autoPlay: true,
     loop: true,
     vertical: false,
     transtionType: 'normal',
-    duration: 1000,
+    duration: 2000,
+    transtionTime: 300,
     showIndicator: true,
-    indicatorPos: 'right',
+    indicatorPos: 'center',
     indicatorType: 'normal',
     touchRange: 10,
     initSlide: 0,
