--- a/index.html
+++ b/index.html
@@ -5,39 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no" />
   <title>slide</title>
-  <link rel="stylesheet" href="demo/app.css">
-  <style>
-  html,
-  body {
-    margin: 0;
-    padding: 0;
-  }
-  ul {
-    margin:0;
-  }
-  </style>
+  <link rel="stylesheet" href="dist/mSlider.min.css">
+  <link rel="stylesheet" href="index.css">
 </head>
-
 <body>
   <div id="slider" class="slider">
   </div>
-  <script src="src/index.js"></script>
-  <script>
-  var slider = new mSlider({
-    el: '#slider',
-    data: [
-      'demo/img/slider1.png',
-      'demo/img/slider2.png',
-      'demo/img/slider3.png',
-      'demo/img/slider4.png',
-      'demo/img/slider5.png'
-    ],
-    autoPlay: false,
-    height: '200px',
-    width: '100%',
-    replace: true
-  })
-  </script>
+  <script src="dist/mSlider.min.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
