--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
   <section class="tip">
     需要手动 F12 并打开模拟工具 :)
   </section>
-  <main class="main">
-    <section class="panel">
+  <section class="main">  
+    <header class="header">
+      <a class="header_item" href="">github</a>
+      <a class="header_item" href="">document</a>
+    </header>
+    <main>
+      <!-- <section class="panel">
       <header class="panel_header">
         1.轮播控制
       </header>
@@ -77,8 +82,40 @@
         <button class="btn">pause</button>
         <button class="btn">destroy</button>
       </footer>
-    </section>
-  </main>
+    </section> -->
+      <section class="container">
+        <header class="container_header">
+          示例1: 默认
+        </header>
+        <main class="main slider" id="demo1">
+        </main>
+      </section>
+      <section class="container">
+        <header class="container_header">
+          示例2: fade动画
+        </header>
+        <main class="main slider" id="demo2">
+        </main>
+      </section>
+      <section class="container">
+        <header class="container_header">
+          示例3: 垂直滑动,非自动轮播
+        </header>
+        <main class="main slider" id="demo3">
+        </main>
+      </section>
+      <section class="container">
+        <header class="container_header">
+          示例4: 圆形指示器, 位于右侧
+        </header>
+        <main class="main slider" id="demo4">
+        </main>
+      </section>
+    </main>
+    <footer class="footer">
+      <a href="https://github.com/kraaas/mSlider" target="_blank">更多特性 > </a>
+    </footer>
+  </section>
   <script src="dist/mSlider.min.js"></script>
   <script src="index.js"></script>
 </body>
