--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   </section>
   <section class="main">  
     <header class="header">
-      <a class="header_item" href="">github</a>
-      <a class="header_item" href="">document</a>
+      <a class="header_item" href="https://github.com/kraaas/mSlider" target="_blank">github</a>
+      <a class="header_item" href="https://github.com/kraaas/mSlider" target="_blank">document</a>
     </header>
     <main>
       <!-- <section class="panel">
